--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,19 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
         <title>Aniket Raj</title>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-RC1YXQ6S8F"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+
+            gtag("config", "G-RC1YXQ6S8F");
+        </script>
     </head>
+
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
